<resources>
    <string name="app_name">资产管理系统</string>
    <string name="title_assets_manage">资产管理</string>
    <string name="title_base_set">基础设置</string>
    <string name="title_person_set">我的</string>
    <string name="login_username_hint">用户名/手机号&#8230;</string>
    <string name="register_username_hint">用户名&#8230;</string>
    <string name="login_password_hint">请输入密码&#8230;</string>
    <string name="login">登录</string>
    <string name="logout">退出</string>
    <string name="repair_password">修改密码</string>
    <string name="icon_like">&#xf087;</string>
    <string name="icon_user"><![CDATA[&#xf007;]]></string>
    <string name="register">注册</string>
    <string name="login_telephone_hint">请输入手机号</string>
    <string name="register_txt1">还没有注册？</string>
    <string name="register_txt2">注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="department">所属部门</string>
    <string name="query_my_assets">我管理的资产</string>
    <string name="update_my_info">个人信息</string>
    <string name="update_my_department">变更所属部门</string>
    <string name="turn_over_scope">移交范围：</string>
    <string name="location">位置</string>
    <string name="manager">管理员</string>
    <string name="btn_new_location_text">新位置</string>
    <string name="btn_new_department_text">新部门</string>
    <string name="btn_new_receiver_text">接收者</string>
    <string name="btn_confirm">确定</string>
    <string name="rb_single_text">单个</string>
    <string name="rb_overall_text">整体</string>
    <string name="turn_over_content">移交内容：</string>
    <string name="btn_search_text">查找</string>
    <string name="editview_hint_text">请输入资产编号</string>
    <string name="btn_next_text">下 一 个</string>
    <string name="btn_category_text">选择类别</string>
    <string name="name_and_image">名称（图）</string>
    <string name="all_text">全部</string>
    <string name="repair_old_password_hint">请输入旧密码</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_no_agree">不同意</string>
    <string name="btn_agree">同意</string>
    <string name="image_text">编辑</string>

    <string name="btn_making_label">打印</string>
    <string name="btn_print_and_move">打印并移交</string>
    <string name="btn_connect_printer">打印机：未连接打印机</string>
    <string name="connectprintersuccess">连接打印机成功！</string>
    <string name="connectprinterfailed">连接打印机失败</string>
    <string name="printsuccess">标签打印成功</string>
    <string name="printfailed">标签打印失败</string>
    <string name="nowisconnectingprinter">正在连接...</string>
    <string name="unsupportedbluetooth">当前设备不支技蓝牙</string>
    <string name="unenablebluetooth">蓝牙设备未开启</string>
    <string name="selectbondeddevice">选择已绑定设备</string>
    <string name="connect_printer">未连接打印机</string>
    <string name="pleaseconnectprinter">打印机未连接，请先连接打印机！</string>
    <string name="waitconnectingprinter">正在连接打印机，请稍候！</string>
    <string name="btn_add">增加</string>
    <string name="btn_edit">修改</string>
    <string name="btn_delete">删除</string>
    <string name="dialog_title_add">请输入增加内容</string>
    <string name="dialog_title_edit">请修改内容</string>
    <string name="dialog_message_delete">是否确定删除该内容？</string>
    <string name="query_condition">查询条件</string>
    <string name="bmob_common_action_cancel">取消</string>

    <string name="list_no_data">没有新的内容了哦~</string>
</resources>
