<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/background">

    <include layout="@layout/include_navi" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <ImageView
            android:id="@+id/iv_single_asset_image"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:src="@drawable/assets_image_default" />
    </RelativeLayout>

    <include layout="@layout/view_line_between"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/manager"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_scan_asset_manager"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/location"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_scan_asset_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/department"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_scan_asset_department"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="登记日期"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_scan_asset_register_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="状态"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_scan_asset_state"
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp" />
        </LinearLayout>



    </LinearLayout>

    <include layout="@layout/view_line_between" />

    <LinearLayout
        android:id="@+id/ll_asset_single_management"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="5dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/btn_single_asset_change"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/height_2"
                android:padding="10dp"
                fancy:fb_borderColor="#FFFFFF"
                fancy:fb_borderWidth="0dp"
                fancy:fb_defaultColor="#3f51b4"
                fancy:fb_focusColor="#7182e2"
                fancy:fb_radius="15dp"
                fancy:fb_text="移交"
                fancy:fb_textColor="#FFFFFF"
                fancy:fb_textFont="隶书.ttf"
                fancy:fb_textSize="20sp" />
            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/btn_single_asset_cancel_change"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/height_2"
                android:visibility="gone"
                android:padding="10dp"
                fancy:fb_borderColor="#FFFFFF"
                fancy:fb_borderWidth="0dp"
                fancy:fb_defaultColor="#3f51b4"
                fancy:fb_focusColor="#7182e2"
                fancy:fb_radius="15dp"
                fancy:fb_text="取消移交"
                fancy:fb_textColor="#FFFFFF"
                fancy:fb_textFont="隶书.ttf"
                fancy:fb_textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/btn_single_asset_maintain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/height_2"
                android:padding="10dp"
                fancy:fb_borderColor="#FFFFFF"
                fancy:fb_borderWidth="0dp"
                fancy:fb_defaultColor="#3f51b4"
                fancy:fb_focusColor="#7182e2"
                fancy:fb_radius="15dp"
                fancy:fb_text="维修"
                fancy:fb_textColor="#FFFFFF"
                fancy:fb_textFont="隶书.ttf"
                fancy:fb_textSize="20sp" />


            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/btn_single_asset_cancel_maintain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/height_2"
                android:visibility="gone"
                android:padding="10dp"
                fancy:fb_borderColor="#FFFFFF"
                fancy:fb_borderWidth="0dp"
                fancy:fb_defaultColor="#3f51b4"
                fancy:fb_focusColor="#7182e2"
                fancy:fb_radius="15dp"
                fancy:fb_text="修好"
                fancy:fb_textColor="#FFFFFF"
                fancy:fb_textFont="隶书.ttf"
                fancy:fb_textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/btn_single_asset_lose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/height_2"
                android:padding="10dp"
                fancy:fb_borderColor="#FFFFFF"
                fancy:fb_borderWidth="0dp"
                fancy:fb_defaultColor="#3f51b4"
                fancy:fb_focusColor="#7182e2"
                fancy:fb_radius="15dp"
                fancy:fb_text="丢失"
                fancy:fb_textColor="#FFFFFF"
                fancy:fb_textFont="隶书.ttf"
                fancy:fb_textSize="20sp" />

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/btn_single_asset_cancel_lose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/height_2"
                android:visibility="gone"
                android:padding="10dp"
                fancy:fb_borderColor="#FFFFFF"
                fancy:fb_borderWidth="0dp"
                fancy:fb_defaultColor="#3f51b4"
                fancy:fb_focusColor="#7182e2"
                fancy:fb_radius="15dp"
                fancy:fb_text="找回"
                fancy:fb_textColor="#FFFFFF"
                fancy:fb_textFont="隶书.ttf"
                fancy:fb_textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/btn_single_asset_scrap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/height_2"
                android:padding="10dp"
                fancy:fb_borderColor="#FFFFFF"
                fancy:fb_borderWidth="0dp"
                fancy:fb_defaultColor="#3f51b4"
                fancy:fb_focusColor="#7182e2"
                fancy:fb_radius="15dp"
                fancy:fb_text="报废"
                fancy:fb_textColor="#FFFFFF"
                fancy:fb_textFont="隶书.ttf"
                fancy:fb_textSize="20sp" />

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/btn_single_asset_cancel_scrap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/height_2"
                android:visibility="gone"
                android:padding="10dp"
                fancy:fb_borderColor="#FFFFFF"
                fancy:fb_borderWidth="0dp"
                fancy:fb_defaultColor="#3f51b4"
                fancy:fb_focusColor="#7182e2"
                fancy:fb_radius="15dp"
                fancy:fb_text="取消报废"
                fancy:fb_textColor="#FFFFFF"
                fancy:fb_textFont="隶书.ttf"
                fancy:fb_textSize="20sp" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_asset_single_receive"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="5dp"
        android:layout_weight="2"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/btn_single_asset_receive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/height_2"
                android:padding="10dp"
                fancy:fb_borderColor="#FFFFFF"
                fancy:fb_borderWidth="0dp"
                fancy:fb_defaultColor="#3f51b4"
                fancy:fb_focusColor="#7182e2"
                fancy:fb_radius="15dp"
                fancy:fb_text="接收"
                fancy:fb_textColor="#FFFFFF"
                fancy:fb_textFont="隶书.ttf"
                fancy:fb_textSize="20sp" />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/btn_single_asset_return"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/height_2"
                android:padding="10dp"
                fancy:fb_borderColor="#FFFFFF"
                fancy:fb_borderWidth="0dp"
                fancy:fb_defaultColor="#3f51b4"
                fancy:fb_focusColor="#7182e2"
                fancy:fb_radius="15dp"
                fancy:fb_text="退回"
                fancy:fb_textColor="#FFFFFF"
                fancy:fb_textFont="隶书.ttf"
                fancy:fb_textSize="20sp" />


        </LinearLayout>


    </LinearLayout>
</LinearLayout>